--- a/todoapp/.vscode/launch.json
+++ b/todoapp/.vscode/launch.json
@@ -5,8 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Dart",
-            "program": "todoapp/lib/main.dart",
+            "name": "Flutter",
             "request": "launch",
             "type": "dart"
         }
